# cpp-webview-gui

./: CMakeLists.txt  build.bat
src/: main.cpp
ui/: index.html  package.json  postbuild.js
ui/src/: main.js  style.css
